tests/lifetime/loan/drop_loan_blocks_direct_write.err.expected
error: at 7:13: [LT-LoanConflict] In function 'f', block 'entry': cannot write to 'x': already borrowed by 'r'
   |
 7 |             x = 42;
   |             ^^^^^^
  = note: borrow of 'x' occurs here
   |
 6 |             r = &drop x;
   |             ^^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
